chore: change get customer by id chore: update readme
