# docs/swagger.json
@@ -58,9 +58,9 @@
                 }
             }
         },
-        "/api/customers/{cpf}": {
+        "/api/customers/{id}": {
             "get": {
-                "description": "Get customer by CPF",
+                "description": "Get customer by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -70,12 +70,12 @@
                 "tags": [
                     "Customer"
                 ],
-                "summary": "Get customer by CPF",
+                "summary": "Get customer by ID",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "12345678910",
-                        "name": "CPF",
+                        "description": "12",
+                        "name": "Id",
                         "in": "path",
                         "required": true
                     }
@@ -91,9 +91,7 @@
                         "description": "Customer not found"
                     }
                 }
-            }
-        },
-        "/api/customers/{id}": {
+            },
             "put": {
                 "description": "Update customer",
                 "consumes": [
